@@ -9,6 +9,8 @@ import org.cardanofoundation.explorer.api.model.response.pool.lifecycle.DeRegist
 import org.cardanofoundation.explorer.api.model.response.pool.lifecycle.PoolUpdateDetailResponse;
 import org.cardanofoundation.explorer.api.model.response.pool.lifecycle.RewardResponse;
 import org.cardanofoundation.explorer.api.model.response.pool.lifecycle.TabularRegisResponse;
+import org.cardanofoundation.explorer.api.model.response.pool.projection.PoolHistoryKoiosProjection;
+import org.cardanofoundation.explorer.api.model.response.pool.projection.PoolReportProjection;
 import org.cardanofoundation.explorer.api.model.response.pool.report.PoolReportExportResponse;
 import org.cardanofoundation.explorer.api.model.response.pool.report.PoolReportListResponse;
 import org.cardanofoundation.explorer.api.repository.explorer.PoolReportRepository;
@@ -29,14 +31,17 @@ import org.cardanofoundation.explorer.consumercommon.explorer.entity.PoolReportH
 import org.cardanofoundation.explorer.consumercommon.explorer.entity.ReportHistory;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 
 import java.io.ByteArrayInputStream;
+import java.math.BigDecimal;
+import java.math.BigInteger;
 import java.sql.Timestamp;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -69,7 +74,6 @@ public class PoolReportServiceTest {
   KafkaService kafkaService;
   @Mock
   ReportHistoryService reportHistoryService;
-
   @Mock
   PoolHistoryRepository poolHistoryRepository;
 
@@ -220,19 +224,56 @@ public class PoolReportServiceTest {
             .build())
         .build();
     when(poolReportRepository.findById(any())).thenReturn(Optional.of(poolReport));
-    when(fetchRewardDataService.useKoios()).thenReturn(true);
-    when(fetchRewardDataService.checkPoolHistoryForPool(anySet())).thenReturn(true);
-    when(poolHistoryRepository.getPoolHistoryKoios("pool1c8k78ny3xvsfgenhf4yzvpzwgzxmz0t0um0h2xnn2q83vjdr5dj"))
-        .thenReturn(Collections.emptyList());
-
-    var expect = new BaseFilterResponse<>(Collections.emptyList(), 0, 0, 0);
+    Page<PoolReportProjection> poolReportProjections = new PageImpl<>(List.of(),
+        PageRequest.of(0, 1), 0);
+    when(fetchRewardDataService.useKoios()).thenReturn(false);
+    var expect = new BaseFilterResponse<>(poolReportProjections, List.of());
 
     var response = poolReportService.fetchEpochSize(reportId, PageRequest.of(0, 1), username);
 
-    Assertions.assertEquals(expect.getData(), response.getData());
+    Assertions.assertNull(response.getData());
     Assertions.assertEquals(expect.getTotalItems(), response.getTotalItems());
     Assertions.assertEquals(expect.getCurrentPage(), response.getCurrentPage());
     Assertions.assertEquals(expect.getTotalPages(), response.getTotalPages());
+  }
+
+  @Test
+  void testFetchEpochSize_useKoios_thenReturnResponse(){
+    Long reportId = 1L;
+    String username = "username";
+    PoolReportHistory poolReport = PoolReportHistory.builder()
+        .poolView("pool1c8k78ny3xvsfgenhf4yzvpzwgzxmz0t0um0h2xnn2q83vjdr5dj")
+        .isPoolSize(true)
+        .eventRegistration(true)
+        .eventDeregistration(true)
+        .eventReward(true)
+        .eventPoolUpdate(true)
+        .isFeesPaid(true)
+        .beginEpoch(300)
+        .endEpoch(410)
+        .reportHistory(ReportHistory.builder()
+            .username(username)
+            .storageKey("storageKey")
+            .reportName("reportName")
+            .status(ReportStatus.GENERATED)
+            .type(ReportType.STAKE_KEY)
+            .build())
+        .build();
+    PoolHistoryKoiosProjection projection = Mockito.mock(PoolHistoryKoiosProjection.class);
+    when(projection.getPoolFees()).thenReturn(BigInteger.ONE);
+    when(projection.getEpochNo()).thenReturn(350);
+    when(projection.getActiveStake()).thenReturn(BigInteger.valueOf(100L));
+    when(poolReportRepository.findById(any())).thenReturn(Optional.of(poolReport));
+    when(fetchRewardDataService.useKoios()).thenReturn(true);
+    when(fetchRewardDataService.checkPoolHistoryForPool(anySet())).thenReturn(false);
+    when(fetchRewardDataService.fetchPoolHistoryForPool(anySet())).thenReturn(true);
+    when(poolHistoryRepository.getPoolHistoryKoios(poolReport.getPoolView())).thenReturn(List.of(projection));
+
+    var actual = poolReportService.fetchEpochSize(reportId,PageRequest.of(0,2),username);
+
+    Assertions.assertEquals("350",actual.getData().get(0).getEpoch());
+    Assertions.assertEquals(BigDecimal.valueOf(100L),actual.getData().get(0).getSize());
+    Assertions.assertEquals(1,actual.getTotalItems());
   }
 
   @Test
@@ -348,43 +389,14 @@ public class PoolReportServiceTest {
             .build())
         .build();
     when(poolReportRepository.findById(any())).thenReturn(Optional.of(poolReport));
+    when(fetchRewardDataService.useKoios()).thenReturn(true);
     BaseFilterResponse<RewardResponse> rewardResponse = new BaseFilterResponse<>();
     when(poolLifecycleService.listRewardFilter(any(), any(), any(), any())).thenReturn(
         rewardResponse);
-    when(fetchRewardDataService.useKoios()).thenReturn(true);
+
     var response = poolReportService.fetchRewardsDistribution(reportId, PageRequest.of(0, 1),
         username);
     Assertions.assertEquals(rewardResponse, response);
-  }
-
-  @Test
-  void fetchRewardsDistribution_shouldReturnRewardNotAvailable() {
-    Long reportId = 1L;
-    String username = "username";
-    PoolReportHistory poolReport = PoolReportHistory.builder()
-        .poolView("pool1c8k78ny3xvsfgenhf4yzvpzwgzxmz0t0um0h2xnn2q83vjdr5dj")
-        .isPoolSize(true)
-        .eventRegistration(true)
-        .eventDeregistration(true)
-        .eventReward(true)
-        .eventPoolUpdate(true)
-        .isFeesPaid(true)
-        .beginEpoch(300)
-        .endEpoch(410)
-        .reportHistory(ReportHistory.builder()
-                           .username(username)
-                           .storageKey("storageKey")
-                           .reportName("reportName")
-                           .status(ReportStatus.GENERATED)
-                           .type(ReportType.STAKE_KEY)
-                           .build())
-        .build();
-    when(poolReportRepository.findById(any())).thenReturn(Optional.of(poolReport));
-    when(fetchRewardDataService.useKoios()).thenReturn(false);
-
-    var response = poolReportService.fetchRewardsDistribution(reportId, PageRequest.of(0, 1),
-        username);
-    Assertions.assertNull(response.getData());
   }
 
   @Test
